# farmacIA

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  global.css
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: medication.rs  mod.rs  search.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/models/: medication.rs  mod.rs
src/components/home/: Category.tsx
src/components/layouts/: Layout.tsx
src/pages/: Home.tsx  MedicationDetail.tsx
src/types/: Medication.ts
src/utils/: getGreeting.ts
