[package]
name = "farmacia"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sergio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }  # Added "macros"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
dotenv = "0.15"
