[package]
name = "farmacia"
version = "0.2.0"
description = "A Tauri App"
authors = ["Sergio"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
scraper = "0.19"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
